--- a/src/projects/ProjectDisplay.css
+++ b/src/projects/ProjectDisplay.css
@@ -1,3 +1,20 @@
+.ProjectDisplay{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 15vh;
+}
+
 .ProjectDisplay-project{
-    width: 300px;
+    width: 75vw;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+@media only screen and (max-width:1080px){
+    .ProjectDisplay-project a{
+        font-size: 5vw;
+    }
 }
