hamburger menu styling

--- a/src/navigation/HamburgerMenu.css
+++ b/src/navigation/HamburgerMenu.css
@@ -1,15 +1,16 @@
-/* .HamburgerMenu{
-    border-top: 1px solid black;
-} */
+
 
 .HamburgerMenu{
+    position: absolute;
+    right: 5vw;
+    top: 4vh;
     display: inline-block;
     /* margin: 20px; */
   }
   
   .HamburgerMenu-line{
-    border: 1px solid black;
-    width: 50px;
+    border: 2px solid black;
+    width: 35px;
     height:0px;
     margin-bottom: 10px;
     transition: transform .5s, width .5s, border .25s;
@@ -17,30 +18,47 @@
   
   .HamburgerMenu-menu{
     position: absolute;
+    right: .25vw;
     z-index: 1;
     visibility:hidden;
     opacity: 0;
     transition: visibility 0s, opacity 1s;
     display:flex;
     flex-direction: column;
+    align-items: center;
+    width: 30vw;
   }
+/* 
+  .HamburgerMenu.a{
+    font-size: 30px;
+  } */
   
   .HamburgerMenu-line.top.active{
     transform-origin: center;
-    transform: rotate(45deg) translateX(8.75px) translateY(8.75px);
+    width:35px;
+    transform: rotate(45deg) translateX(14.75px) translateY(4.75px);
   }
   
   .HamburgerMenu-line.middle.active{
+    transform-origin: center;
+    transform: translateX(25px);
     width:0px;
-    border: 1px solid white;
+    border: 2px solid black;
   }
   .HamburgerMenu-line.bottom.active{
     transform-origin: center;
-    transform: rotate(-45deg) translateX(8.75px) translateY(-8.75px);
+    width:35px;
+    transform: rotate(-45deg) translateX(14.75px) translateY(-4.75px);
   }
   
   .HamburgerMenu-menu.active{
     visibility:visible;
     opacity:1;
-    background-color: red;
+    background-color: rgb(201, 184, 184);
+    border: 2px solid black;
+  }
+
+  a.active{
+    font-weight: bold;
+    font-size: 5vw;
   }
