--- a/src/navigation/Nav.css
+++ b/src/navigation/Nav.css
@@ -3,8 +3,10 @@
     display: flex;
     justify-content: space-between;
     height: 10vh;
-    margin: .5vh .5vh;
+    margin: 1.5vh 1.5vh;
     border: 5px solid black;
+    box-shadow: 0px 0px 15px 10px rgb(62, 70, 68);
+
 }
 
 .Nav-site-title{
@@ -17,15 +19,18 @@
     margin: 2vh 2vw;
 }
 
-
 .Nav a{
     margin: 40px auto auto 20px;
     
 }
 
+a.active{
+    font-weight: bold;
+    font-size: 3vh;
+  }
+
 @media only screen and (max-width:1080px) {
     .Nav{
-        height: 10vh;
         flex-direction: column;
     }
     
@@ -42,8 +47,7 @@
     
     .Nav a{
         margin: 2px;
-        width: 20vw;
-        font-size: 3vh;
+        font-size: 5vh;
         text-decoration: none;
     }
 }
