--- a/src/navigation/Nav.css
+++ b/src/navigation/Nav.css
@@ -1,54 +1,70 @@
-.Nav{
+.Nav {
     background-color: cadetblue;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
     height: 10vh;
-    margin: 1.5vh 1.5vh;
+    margin: 1.5vh;
     border: 5px solid black;
     box-shadow: 0px 0px 2vw 1.5vw rgb(62, 70, 68);
+    justify-content: space-between;
+    align-items: center;
 
 }
 
-.Nav-site-title{
+.Nav-site-title {
     justify-content: center;
     display: flex;
     margin-left: 5vw;
+    align-content: center;
+    flex-wrap: wrap;
 }
 
-.Nav-links{
+.Nav-links {
     margin: 2vh 2vw;
 }
 
-.Nav a{
+.Nav a {
     margin: 40px auto auto 20px;
-    
+    font-size: 3vh;
+
 }
 
-a.active{
+.Nav a.active {
     font-weight: bold;
-    font-size: 3vh;
-  }
+}
 
 @media only screen and (max-width:1080px) {
-    .Nav{
-        flex-direction: column;
+    .Nav {
+        min-height: 90px;
     }
-    
-    .Nav-links-browser{
+
+    .Nav-links {
+        margin: 0vh;
+    }
+
+    .Nav-links-browser {
         visibility: hidden;
         display: none;
     }
 
-    .Nav-site-title{
-        justify-content:flex-start;
+    .Nav-site-title {
+        justify-content: flex-start;
         display: flex;
-        margin-left: 5vw;
-        height: 3vh;
     }
-    
-    .Nav a{
+
+    .Nav a {
         margin: 2px;
         font-size: 10vw;
         text-decoration: none;
+    }
+}
+
+@media only screen and (max-width:1080px) and (min-aspect-ratio: 1/1) {
+    .Nav .logical {
+        font-size: 10vh;
+    }
+
+    .Nav .creative {
+        font-size: 10vh;
     }
 }
