--- a/src/App.css
+++ b/src/App.css
@@ -71,17 +71,19 @@ body {
 }
 
 @media only screen and (max-width:1080px) {
-  .logical{
-    font-family: 'Share Tech', sans-serif;
-    font-size: 4vh;
-  }
-  
-  .creative{
-    font-family: 'Great Vibes', cursive;
-    font-size: 4vh;
-  }
   .App footer{
     display: flex;
     justify-content: center;
   }
+}
+
+@media only screen and (max-width:1080px)and(min-aspect-ratio: 1/1) {
+  /* .logical{
+    font-size: 10vh;
+  }
+  
+  .creative{
+
+    font-size: 10vh;
+  } */
 }
