--- a/src/about/AboutDisplay.css
+++ b/src/about/AboutDisplay.css
@@ -1,56 +1,22 @@
-.TechnicalDisplay {
-    margin-left: 10vw;
-    margin-right: 10vw;
-
-}
-
-.TechnicalDisplay p {
-    display: block;
-    width: 100vw;
-    font-size: 7.5vw;
-    font-weight: bold;
-    margin: 15px;
-    box-shadow: 0px 0px 2vw 1.5vw rgb(62, 70, 68);
-}
-
-
-.TechnicalDisplay-skills {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-content: flex-start;
-    width: 80vw;
-    margin-bottom: 200px;
-}
-
-.TechnicalDisplay-skills h6 {
-    font-size: 1.5vw;
-    margin-top: 0px;
-}
-
-.dev-icons {
+.AboutDisplay {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    flex-basis: 10vw;
-    row-gap: 2vw;
-    padding: 5px;
+}
+
+.AboutDisplay-content {
+    width: 50vw;
+    padding: 1vh 1vw;
+    margin: 1vh 1vw;
+}
+
+.AboutDisplay-title {
+    margin: 1vh 1vw;
 }
 
 @media only screen and (max-width:1080px) {
-    .dev-icons {
-        flex-basis: 10vh;
-        padding: 2vw;
-    }
-
-    .TechnicalDisplay-skills h6 {
-        font-size: 3.5vw;
-    }
-
-    .dev-icons img{
-        width: 15vw;
+    .AboutDisplay-content {
+        width: 70vw;
     }
 
 }
