--- a/src/technical/TechnicalDisplay.css
+++ b/src/technical/TechnicalDisplay.css
@@ -10,6 +10,7 @@
     font-size: 7.5vw;
     font-weight: bold;
     margin: 15px;
+    border: 1px solid black;
     box-shadow: 0px 0px 2vw 1.5vw rgb(62, 70, 68);
 }
 
